# gpx-compressor-wasm

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src/lib/rust/gpx-handler/: Cargo.toml
src/lib/rust/gpx-handler/src/: lib.rs
src/lib/rust/gpx-handler/src/gpx_compressor/: compress.rs  gpx.rs  mod.rs  reduce.rs
