[package]
name = "gpx-compressor-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]

wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.5"

serde =  { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
quick-xml = { version = "0.31", features = ["serialize"] }
zstd = {version = "0.13.2", features = ["wasm"]}
bincode = "1.3.3"
serde-xml-rs = "0.6.0"
